--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,7 +42,7 @@ html, body {
   --bg1: #0c0c0c;
 }
 
-/* Add this to your global CSS */
+/* Add this to your global CSS ifr */
 .squid-widget-container {
   background-color: rgb(8, 92, 166);
   border-radius: 16px;
